@@ -1,3 +1,7 @@
+2009-04-02  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/ResolveVisitor.cs: Fixed failing unit test.
+
 2009-04-01  Mike Krüger  <mkrueger@novell.com>
 
 	* Gui/NRefactoryResolver.cs: removed debug messages.
